# cupix

./: .gitignore  README.md
cupix/: pyproject.toml
cupix/cupix.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
cupix/likelihood/: CAMB_model.py  fitter.py  forestflow_emu.py  free_parameter.py  generate_fake_data.py  iminuit_minimizer.py  input_pipeline.py  likelihood.py  likelihood_parameter.py  lyaP3D.py  lya_theory.py  minimize_posterior.py  model_contaminants.py  model_igm.py  model_lya.py  model_systematics.py  new_likelihood.py  new_minimizer.py  old_fitter.py  old_likelihood.py  old_minimizer.py  old_theory.py  pipeline.py  plotter.py  posterior.py  sampler.py  theory.py  window_and_rebin.py
cupix/nuisance/: AGN_model.py  SN_model.py  base_contaminants.py  base_igm.py  hcd_model_McDonald2005.py  hcd_model_Rogers2017.py  hcd_model_class.py  hcd_model_new.py  hcd_model_rogers_class.py  mean_flux_class.py  mean_flux_model.py  mean_flux_model_chunks.py  metal_metal_model.py  metal_metal_model_class.py  metal_model.py  metal_model_class.py  pressure_class.py  pressure_model.py  resolution_model.py  resolution_model_chunks.py  si_add.py  si_mult.py  thermal_class.py  thermal_model.py
cupix/px_data/: base_px_data.py  data_AbdulKarim25.py  data_DESI_DR2.py  data_healpix.py  data_lyacolore.py  healpixel_data.py  px_binning.py  px_window.py  px_ztk.py  read_healpix_px.py
cupix/rebin_cov/: Px_meas.py  config.yaml  healpix_px.py  lib_funcs.py  main.py  postprocess_data.py  rebin_cov.py  rebin_stats.py
cupix/utils/: hull.py  utils.py  utils_sims.py
cupix/window/: mask_calculations.py  window.py
data/: .gitignore
notebooks/: camb_test.ipynb  data_test.ipynb  pipeline_test.ipynb  theory_test.ipynb
plots/: pxpaper.mplstyle
scripts/: chi2_scan.py  chi2_scan.sh  chi2_scan_forecast.py  chi2_scan_mock.py  fit_many_mocks.py  fit_true_cont.py  (+5 more)
(+77 files in other folders)
